@@ -2,7 +2,8 @@
 
 Sqllogdir = @DATADIR@/ebox/sqllog/
 
-nobase_Sqllog_DATA =  ebackup_storage_usage.sql ebackup_storage_usage_report.sql
+nobase_Sqllog_DATA =  ebackup_storage_usage.sql ebackup_storage_usage_report.sql \
+		      ebackup_stats.sql
 
 EXTRA_DIST = $(nobase_Sqllog_DATA)
 
