@@ -1,7 +1,8 @@
 HEAD
+	+ Parse and store backup statistics for further processing
 	+ First date is selected by default on restore-tool
 	+ Set default value for the keep previous full copies setting
-	+ Added 'files included' domain and restore all fiels options to
+	+ Added 'files included' domain and restore all fields options to
 	  restore-tool
 	+ Using 'cat' command instead of 'tail' to retrieve backup metadata
 	+ Clean temporal directory before doing logs restore
